# NetConnect4

./: .clang-format  .clang-tidy  .cppcheck  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/ASGEGame/: ASGEGame.cpp  ASGEGame.hpp  CMakeLists.txt  SpriteComponent.cpp  SpriteComponent.hpp  main.cpp
apps/ASGEServer/: ASGEServer.cpp  ASGEServer.hpp  CMakeLists.txt  main.cpp
cmake/: submodule.cmake
include/ASGENetLib/: GCNetClient.hpp  GCNetServer.hpp  GComponent.hpp
include/GameComponents/: SpriteComponent.cpp  SpriteComponent.hpp  TextComponent.cpp  TextComponent.hpp
include/GameObjects/: GameObject.cpp  GameObject.h
include/GameObjects/ConnectFour/: ClientBoard.cpp  ClientBoard.h  ConnectBoard.cpp  ConnectBoard.h  CounterSprite.cpp  CounterSprite.h  ServerBoard.cpp  ServerBoard.h
include/GameObjects/Scenes/: GameScene.cpp  GameScene.h  LobbyScene.cpp  LobbyScene.h  Scene.h  SpriteScene.cpp  SpriteScene.h  TitleScreen.cpp  TitleScreen.h  WinScene.cpp  WinScene.h
include/GameObjects/UI/: ChatMessage.cpp  ChatMessage.h  ChatWindow.cpp  ChatWindow.h  UIButton.cpp  UIButton.h  UITextBox.cpp  UITextBox.h
include/Utilities/: BoardSettings.h  FontManager.cpp  FontManager.h  NetUtil.h  UserClient.h
src/: CMakeLists.txt  GCNetClient.cpp  GCNetServer.cpp
